--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@adonisjs/validator": "^12.1.1",
     "luxon": "^2.1.1",
     "pg": "^8.7.1",
+    "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.20"
